src/objects/Travel_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Travel Approvals</relationshipLabel>
        <relationshipName>Travel_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_State__c</fullName>
        <label>Destination State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Out_of_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out-of-State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip__c</fullName>
        <label>Purpose of Trip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Approved&apos;) , IMAGE(&quot;/resource/StatusImages/thumbs-up.png&quot;, &quot;Accepted&quot;, 20, 20),
IF ( ISPICKVAL( Status__c , &apos;Rejected&apos;), IMAGE(&quot;/resource/StatusImages/thumbs-down.png&quot;, &quot;Rejected&quot;, 20, 20),
IMAGE(&quot;/resource/StatusImages/draft.png&quot;, &quot;In-Process&quot;, 20, 20)))</formula>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>Expense_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense_Item__c.Travel_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trip_End_Date__c</fullName>
        <label>Trip End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_Start_Date__c</fullName>
        <label>Trip Start Date</label>
        <type>Date</type>
    </fields>
    <label>Travel Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Purpose_of_Trip__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <columns>Destination_State__c</columns>
        <columns>Out_of_State__c</columns>
        <columns>Department__c</columns>
        <columns>Total_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Out_of_State_Travel_Requests</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Status_Indicator__c</columns>
        <columns>Destination_State__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <columns>Total_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Out_of_State__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <label>Open Out of State Travel Requests</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Travel Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Destination_State_must_be_uppercase</fullName>
        <active>true</active>
        <errorConditionFormula>Destination_State__c &lt;&gt; UPPER( Destination_State__c )</errorConditionFormula>
        <errorDisplayField>Destination_State__c</errorDisplayField>
        <errorMessage>Destination State must be entered in UPPERCASE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trip_end_date_after_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Trip_End_Date__c &lt; Trip_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Trip_End_Date__c</errorDisplayField>
        <errorMessage>Trip_End_Date__c &lt; Trip_Start_Date__c</errorMessage>
    </validationRules>
</CustomObject>